--- a/lib/sweet-alert.scss
+++ b/lib/sweet-alert.scss
@@ -65,6 +65,14 @@
 		line-height: normal;
 	}
 
+  input {
+    width: 80%;
+    margin: 20px auto 10px auto;
+    font-size: 16px;
+    text-align: center;
+    height: 20px;
+  }
+
 	button {
 		$btnBlue: #AEDEF4;
 		$btnGray: #D0D0D0;
@@ -123,6 +131,54 @@
 		margin: 20px auto;
 		position: relative;
 		box-sizing: content-box;
+
+    &.question {
+      border-color: $blue;
+
+      & > span {
+        position: absolute;
+        display: block;
+      }
+
+      .que {
+        width: 24px;
+        height: 17px;
+        top: 10px;
+        left: 23px;
+        border: 5px solid $blue;
+        border-bottom: 0px;
+        border-radius: 25px 25px 0px 0px;
+      }
+
+      .sti {
+        height: 13px;
+        width: 9px;
+        top: 25px;
+        left: 43px;
+        border-right: 5px solid $blue;
+        border-bottom: 5px solid $blue;
+        border-radius: 0px 0px 14px 0px;
+      }
+
+      .onm {
+        height: 13px;
+        width: 7px;
+        top: 37px;
+        left: 37px;
+        border-top: 5px solid $blue;
+        border-left: 5px solid $blue;
+        border-radius: 10px 0px 0px 0px;
+      }
+
+      .ark {
+        background-color: $blue;
+        height: 5px;
+        width: 5px;
+        border-radius: 50%;
+        top: 62px;
+        left: 37px;
+      }
+    }
 
 		&.error {
 			border-color: $red;
